[package]
description = "Cargo command to gather the mean and standard error values from criterion benchmarks."
name = "cargo-criterion-means"
version = "0.1.0-beta.3"
edition = "2021"
repository = "https://github.com/CarlKCarlK/cargo-criterion-means"
readme = "README.md"
authors = ["Carl Kadie"]
license = "MIT OR Apache-2.0"
keywords = ["benchmark", "criterion", "cargo", "subcommand"]
categories = [
    "development-tools::profiling",
    "development-tools::cargo-plugins",
]
homepage = "https://github.com/CarlKCarlK/cargo-criterion-means"


[dependencies]
serde_json = "1.0"
walkdir = "2"
